[package]
name = "yoyo"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Jordan Castro jordan@grupojvm.com"]
description = "Polyglot programming framework"
repository = "https://github.com/jordan-castro/yoyo"

[dependencies]
zip = "=6.0.0"
pixelscript = "0.6.1"

[build-dependencies]
reqwest = { version = "0.13.4", features = ["blocking"] }