[package]
name = "yoyo_net"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
reqwest = { version = "0.13", features = ["blocking"] }
etffi = "0.1.2"

[build-dependencies]
cbindgen = "0.29.2"

[profile.release]
opt-level = "z"
strip = true
lto = "fat"
codegen-units = 1
panic = "unwind"
debug = false
incremental = false